--- a/Aboutus.html
+++ b/Aboutus.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">          
     <title>About us</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/TASK 1/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/TASK 1/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/TASK 1/img/favicon-16x16.png">
-    <link rel="manifest" href="/TASK 1/img/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <link rel="manifest" href="./img/site.webmanifest">
     <link rel="stylesheet" href="Aboutus.css"> 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <h1>Created By Nitin Sharma</h1>
 
         <div>
-            <a href="/TASK 1/index.html">Back</a>
+            <a href="./index.html">Back</a>
         </div>
     </section>
 </body>
